# scrivenge

./: CMakeLists.txt  README.md  compiler_flags.cmake
includes/: controller_base.hpp  view_cli_window.hpp  view_ui.hpp  view_window.hpp  view_window_geometry.hpp  view_window_type.hpp
src/: main.cpp  view_cli_window.cpp  view_window_geometry.cpp
